force-app/main/default/objects/Funding_Request__c/fields/A1_Acknowledgments__c.field-meta.xml
<CustomField>
    <fullName>A1_Acknowledgments__c</fullName>
    <label>A1 Acknowledgments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>