force-app/main/default/objects/Funding_Request__c/fields/A1_Funding_Call_Handover__c.field-meta.xml
<CustomField>
    <fullName>A1_Funding_Call_Handover__c</fullName>
    <label>A1 Funding Call Handover</label>
    <type>DateTime</type>
</CustomField>