force-app/main/default/objects/Funding_Request__c/fields/A1_Payment_Authorisation_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>A1_Payment_Authorisation_Submitted_Date__c</fullName>
    <label>A1 Payment Authorisation Submitted Date</label>
    <type>DateTime</type>
</CustomField>