force-app/main/default/objects/Funding_Request__c/fields/A1_Variation_Request_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>A1_Variation_Request_Submitted_Date__c</fullName>
    <label>Variation Request Submitted Date</label>
    <type>DateTime</type>
</CustomField>