force-app/main/default/objects/Funding_Request__c/fields/A2_Acknowledgments__c.field-meta.xml
<CustomField>
    <fullName>A2_Acknowledgments__c</fullName>
    <label>A2 Acknowledgments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>