force-app/main/default/objects/Funding_Request__c/fields/A2_Funding_Call_Handover__c.field-meta.xml
<CustomField>
    <fullName>A2_Funding_Call_Handover__c</fullName>
    <label>A2 Funding Call Handover</label>
    <type>DateTime</type>
</CustomField>