force-app/main/default/objects/Funding_Request__c/fields/Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Funded__c</fullName>
    <label>Amount Funded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>