force-app/main/default/objects/Funding_Request__c/fields/Applicant_1_A1__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_A1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant 1 (A1)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Requests</relationshipLabel>
    <relationshipName>Funding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>