force-app/main/default/objects/Funding_Request__c/fields/Applicant_2_A2__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_A2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant 2 (A2)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Requests (Applicant 2 (A2))</relationshipLabel>
    <relationshipName>Funding_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>