force-app/main/default/objects/Funding_Request__c/fields/Applicant_acknowledgements__c.field-meta.xml
<CustomField>
    <fullName>Applicant_acknowledgements__c</fullName>
    <label>Applicant acknowledgements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>