force-app/main/default/objects/Funding_Request__c/fields/Authorisation_Status_before_handover__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Status_before_handover__c</fullName>
    <label>Authorisation Status before handover</label>
    <length>50</length>
    <type>Text</type>
</CustomField>