force-app/main/default/objects/Funding_Request__c/fields/BusinessDays__c.field-meta.xml
<CustomField>
    <fullName>BusinessDays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BusinessDays</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>