force-app/main/default/objects/Funding_Request__c/fields/Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Requests (Contact 1)</relationshipLabel>
    <relationshipName>Funding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>