force-app/main/default/objects/Funding_Request__c/fields/Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Requests (Contact 2)</relationshipLabel>
    <relationshipName>Funding_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>