force-app/main/default/objects/Funding_Request__c/fields/Customer_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acceptance_Date__c</fullName>
    <label>Customer Acceptance Date</label>
    <type>Date</type>
</CustomField>