force-app/main/default/objects/Funding_Request__c/fields/Customer_Authorisation_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Authorisation_Status__c</fullName>
    <label>Customer Authorisation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request sent to customer(s)</fullName>
            </value>
            <value>
                <fullName>Pending Applicant 2</fullName>
            </value>
            <value>
                <fullName>Pending Applicant 1</fullName>
            </value>
            <value>
                <fullName>Authorised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>