force-app/main/default/objects/Funding_Request__c/fields/Customer_Authorisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Authorisation_Type__c</fullName>
    <label>Customer Authorisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Either to sign</fullName>
            </value>
            <value>
                <fullName>Both to sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>