force-app/main/default/objects/Funding_Request__c/fields/Date_Last_Request_Status_Changes__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Request_Status_Changes__c</fullName>
    <label>Date Last Request Status Changes</label>
    <type>DateTime</type>
</CustomField>