force-app/main/default/objects/Funding_Request__c/fields/Disbursement_amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_amount__c</fullName>
    <formula>IF(ISPICKVAL(Request_Type__c , &apos;Part payment before installation&apos;),  Request_Amount__c ,  IF(Request_Amount__c  &lt;  Net_Funds_Available__c , Request_Amount__c , Net_Funds_Available__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursement amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>