force-app/main/default/objects/Funding_Request__c/fields/Funded_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_To_Date__c</fullName>
    <label>Funded to Date (not including this req)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>