force-app/main/default/objects/Funding_Request__c/fields/Funding_escalation__c.field-meta.xml
<CustomField>
    <fullName>Funding_escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding escalation</label>
    <type>Checkbox</type>
</CustomField>