force-app/main/default/objects/Funding_Request__c/fields/Funding_escalation_date__c.field-meta.xml
<CustomField>
    <fullName>Funding_escalation_date__c</fullName>
    <label>Funding escalation date</label>
    <type>DateTime</type>
</CustomField>