force-app/main/default/objects/Funding_Request__c/fields/Funding_Hold_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Hold_Expiry_Date__c</fullName>
    <label>Funding Hold Expiry Date</label>
    <type>Date</type>
</CustomField>