force-app/main/default/objects/Funding_Request__c/fields/Funding_Notes_to_Lender__c.field-meta.xml
<CustomField>
    <fullName>Funding_Notes_to_Lender__c</fullName>
    <label>Funding Notes to Lender</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>