force-app/main/default/objects/Funding_Request__c/fields/Funding_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Funding_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding On Hold</label>
    <type>Checkbox</type>
</CustomField>