force-app/main/default/objects/Funding_Request__c/fields/Funding_On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Funding_On_Hold_Reason__c</fullName>
    <label>Funding On Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>