force-app/main/default/objects/Funding_Request__c/fields/Has_the_customer_agreed_to_this_payment__c.field-meta.xml
<CustomField>
    <fullName>Has_the_customer_agreed_to_this_payment__c</fullName>
    <label>Customer agreed to this payment timing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>