force-app/main/default/objects/Funding_Request__c/fields/Installation_Date_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date_Confirmed__c</fullName>
    <label>Installation Date Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anticipated</fullName>
            </value>
            <value>
                <fullName>Confirmed by supplier</fullName>
            </value>
            <value>
                <fullName>Confirmed by customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>