force-app/main/default/objects/Funding_Request__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Url</type>
</CustomField>