force-app/main/default/objects/Funding_Request__c/fields/Net_Funds_after_Request__c.field-meta.xml
<CustomField>
    <fullName>Net_Funds_after_Request__c</fullName>
    <formula>IF( ISPICKVAL( Request_Type__c , &apos;Variation&apos;) , Opportunity__r.Previous_Loan_Amount_After_Variation__c - Funded_To_Date__c - Request_Amount__c, Opportunity__r.SyncedQuote.Customer_Amount__c - Funded_To_Date__c - Request_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Funds after Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>