force-app/main/default/objects/Funding_Request__c/fields/Net_Surplus_Shortfall__c.field-meta.xml
<CustomField>
    <fullName>Net_Surplus_Shortfall__c</fullName>
    <label>Net Surplus / Shortfall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>