force-app/main/default/objects/Funding_Request__c/fields/New_Customer_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Amount__c</fullName>
    <label>New Customer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>