force-app/main/default/objects/Funding_Request__c/fields/Paid_To__c.field-meta.xml
<CustomField>
    <fullName>Paid_To__c</fullName>
    <label>Paid To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>