force-app/main/default/objects/Funding_Request__c/fields/Person_Requesting__c.field-meta.xml
<CustomField>
    <fullName>Person_Requesting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Requesting</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Fundings</relationshipName>
    <type>Lookup</type>
</CustomField>