force-app/main/default/objects/Funding_Request__c/fields/Previous_Req_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Req_Type__c</fullName>
    <label>Previous Req Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment in full before installation</fullName>
            </value>
            <value>
                <fullName>Payment in full after installation</fullName>
            </value>
            <value>
                <fullName>Part payment before installation</fullName>
            </value>
            <value>
                <fullName>Remainder of payment after installation</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>