force-app/main/default/objects/Funding_Request__c/fields/Request_Origin__c.field-meta.xml
<CustomField>
    <fullName>Request_Origin__c</fullName>
    <label>Request Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referrer Portal</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>