force-app/main/default/objects/Funding_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment requested by supplier</fullName>
            </value>
            <value>
                <fullName>Payment requested by supplier (pending contract)</fullName>
            </value>
            <value>
                <fullName>Variation requested by customer</fullName>
            </value>
            <value>
                <fullName>Payment requested by customer (pending contract)</fullName>
            </value>
            <value>
                <fullName>Payment authorised by customer</fullName>
            </value>
            <value>
                <fullName>Funding handover call completed</fullName>
            </value>
            <value>
                <fullName>Payment funded</fullName>
            </value>
            <value>
                <fullName>Payment requested by customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>