force-app/main/default/objects/Funding_Request__c/fields/Request_Status_before_handover__c.field-meta.xml
<CustomField>
    <fullName>Request_Status_before_handover__c</fullName>
    <label>Request Status before handover</label>
    <length>50</length>
    <type>Text</type>
</CustomField>