force-app/main/default/objects/Funding_Request__c/fields/Request_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Request_Status_Text__c</fullName>
    <formula>IF( Funding_On_Hold__c , &quot;** ON HOLD ** &quot; &amp;
Funding_On_Hold_Reason__c &amp;
&quot; &quot; &amp;
TEXT( Request_Status__c ) , IF( Funding_escalation__c , &apos;Funding request escalated&apos;, TEXT( Request_Status__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Status</label>
    <type>Text</type>
</CustomField>