force-app/main/default/objects/Funding_Request__c/fields/Submitted_By_Lender__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funded by agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Requests (Submitted By (Lender))</relationshipLabel>
    <relationshipName>Submitted_By_Lender</relationshipName>
    <type>Lookup</type>
</CustomField>