force-app/main/default/objects/Funding_Request__c/fields/Surplus_Shortfall_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Shortfall_Treatment__c</fullName>
    <label>Surplus / Shortfall Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Variation to contract (requires re-approval)</fullName>
            </value>
            <value>
                <fullName>Retain surplus funds in loan account</fullName>
            </value>
            <value>
                <fullName>Disburse surplus funds to customer account</fullName>
            </value>
            <value>
                <fullName>Shortfall paid with customer’s own funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>