force-app/main/default/objects/Funding_Request__c/fields/System_installed_Customer_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>System_installed_Customer_Satisfaction__c</fullName>
    <label>System installed(Customer Satisfaction)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>