force-app/main/default/objects/Funding_Request__c/fields/Total_Funds_Available_Customer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_Available_Customer_Amount__c</fullName>
    <formula>IF( ISPICKVAL( Request_Type__c , &apos;Variation&apos;) , Opportunity__r.Previous_Loan_Amount_After_Variation__c , Opportunity__r.SyncedQuote.Customer_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Funds Available (Customer Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>