force-app/main/default/objects/Funding_Request__c/fields/Variation_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Variation_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variation Requested By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Requests (Variation Requested By)</relationshipLabel>
    <relationshipName>Funding_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>