force-app/main/default/objects/Funding_Request__c/fields/Variation_Status__c.field-meta.xml
<CustomField>
    <fullName>Variation_Status__c</fullName>
    <label>Variation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested by customer</fullName>
            </value>
            <value>
                <fullName>Approved by lender</fullName>
            </value>
            <value>
                <fullName>New loan contract issued</fullName>
            </value>
            <value>
                <fullName>Variation cancelled by customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>