force-app/main/default/objects/Funding_Request__c/fields/Variation_Type__c.field-meta.xml
<CustomField>
    <fullName>Variation_Type__c</fullName>
    <label>Variation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan amount increase</fullName>
            </value>
            <value>
                <fullName>Loan amount decrease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>