force-app/main/default/objects/Funding_Request__c/fields/VOI_link_app2__c.field-meta.xml
<CustomField>
    <fullName>VOI_link_app2__c</fullName>
    <label>VOI link(app2)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>