force-app/main/default/objects/Funding_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Date_Last_Request_Status_Changes__c</columns>
    <columns>Funding_On_Hold__c</columns>
    <columns>Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>